// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the GeocodeAutocomplete component. Should match snapshot - search. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    data-testid="select"
  >
    <div
      class=" css-l45kjq-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class="react-select__control react-select__control--menu-is-open css-19jej77-control"
      >
        <div
          class="react-select__value-container css-3tzzl5-ValueContainer"
        >
          <div
            class="react-select__placeholder css-19jynah-placeholder"
            id="react-select-3-placeholder"
          >
            Type to search...
          </div>
          <div
            class="react-select__input-container css-6j8wv5-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-describedby="react-select-3-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="react-select-3-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class="react-select__input"
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
          >
            <svg
              class="text-2xl"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="react-select__menu css-1jtw5r9-menu"
        id="react-select-3-listbox"
      >
        <div
          class="react-select__menu-list css-4ljt47-MenuList"
        >
          <div
            class="react-select__menu-notice react-select__menu-notice--no-options css-gg45go-NoOptionsMessage"
          >
            Search for Location
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the GeocodeAutocomplete component. Should match snapshot. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class=" css-l45kjq-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="react-select__control css-19jej77-control"
    >
      <div
        class="react-select__value-container css-3tzzl5-ValueContainer"
      >
        <div
          class="react-select__placeholder css-19jynah-placeholder"
          id="react-select-2-placeholder"
        >
          Type to search...
        </div>
        <div
          class="react-select__input-container css-6j8wv5-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-2-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__input"
            id="react-select-2-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
        >
          <svg
            class="text-2xl"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
